--- a/Dashboard/style/sidebar.css
+++ b/Dashboard/style/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  position: fixed;
+  position: static;
   left: 0;
   bottom: 0;
   top: 0px;
